@@ -1,8 +1,9 @@
 Revision history for Perl extension App::Sqitch
 
 1.3.2
-     - Fixed Snowflake warehouse and role setup to properly quote identifiers.
-       Thanks to @marc-marketparts for the report (#685).
+     - Fixed Snowflake warehouse and role setup to properly quote identifiers
+       unless they're valid unquoted identifiers or already quoted. Thanks to
+       @marc-marketparts for the report (#685).
      - Fixed a bug reworking a change when a rework directory is configured
        but not created. Thanks to @jfeaver for the report (#686).
      - Output the list of changes to be deployed or reverted when --verbose is
